# UniversalMotorControl

./: .gitignore  README.md
UniversalMotorControllerG474/: .cproject  .mxproject  .project  CMakeLists.txt  CMakePresets.json  G474_Reset.cfg  STM32G474CEUX_FLASH.ld  STM32G474CEUX_RAM.ld  UniversalMotorControl.ioc  UniversalMotorControllerG473 Debug.launch  UniversalMotorControllerG473.ioc  vcpkg-configuration.json
UniversalMotorControllerG474/Core/Inc/: AimingModules.h  ControlClassesInternal.h  DataStorageEngine.h  DeviceSignalInterfaces.h  FreeRTOSConfig.h  PassSignalInterface.h  TCPInterface.h  TimerControls.h  UtiliteFunctions.h  ValueThreadsProcessing.h  W5500ReadWriteInterface.h  main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
UniversalMotorControllerG474/Core/Inc/RING_BUFFER/: CommandStructures.h  MessageDispatcherGeneric.h  MessageIteratorGeneric.h  MessageStructGeneric.h  RingBufferGeneric.h  TypeRegisterEngine.h  engine_ring_buffer_generic.h  engine_type_register.h  message_command_structures.h  message_dispatcher_generic.h  message_header_generic.h  message_iterator_generic.h  message_struct_generic.h
UniversalMotorControllerG474/Core/Src/: DataStorageEngine.cpp  TCPInterface.cpp  TypeRegisterEngine.cpp  UtiliteFunctions.cpp  W5500ReadWriteInterface.c  main.cpp  stm32g4xx_hal_msp.c  stm32g4xx_hal_timebase_tim.c  stm32g4xx_it.c
UniversalMotorControllerG474/Drivers/ETHERNET/: socket.c  wizchip_conf.c  wizchip_conf.h
UniversalMotorControllerG474/Drivers/ETHERNET/W5500/: w5500.c  w5500.h
UniversalMotorControllerG474/Drivers/ETHERNET/w5500/: w5500.c
(+116 files in other folders)
